[package]
name = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.22"
solana-sdk = "1.10.29"
solana-program="1.10.29"
anchor-client="0.25.0"
solana-client="1.10.29"
anyhow="1.0.66"
log = "0.4.16"
thiserror = "1.0.36"
home="0.5.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.14"
serde_json="~1"
bond = { git = "https://github.com/scale-protocol/bond",features = ["no-entrypoint"]}
spl-token="3.3.0"
spl-associated-token-account="1.0.3"
tokio = { version = "1", features = ["full"] }
env_logger="0.9.0"
tokio-stream="0.1.8"
solana-account-decoder="1.10.29"
sled="0.34.7"
pyth-sdk-solana = "0.6.1"
dashmap="5.4.0"
flume="0.10.14"
chrono="0.4.22"
